--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python-rtmidi = "^1.4.9"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2"
+black = "^22.3.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
