Add click as dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Lars <lars@tüftelecke.de>"]
 [tool.poetry.dependencies]
 python = "^3.10"
 python-rtmidi = "^1.4.9"
+click = "^8.1.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2"
