--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ click = "^8.1.1"
 [tool.poetry.dev-dependencies]
 pytest = "^6.2"
 
+[tool.poetry.scripts]
+peartrainer = "peartrainer.main:main"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
