--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,9 @@ jobs:
 
       - name: Install Poetry
         uses: snok/install-poetry@v1
+        with:
+          virtualenvs-in-project: flase
+          virtualenvs-path: ./.virtualenvs
 
       - name: Cache Poetry virtualenv
         uses: actions/cache@v1
@@ -29,10 +32,10 @@ jobs:
           restore-keys: |
             poetry-${{ hashFiles('**/poetry.lock') }}
 
-      - name: Set Poetry config
-        run: |
-          poetry config settings.virtualenvs.in-project false
-          poetry config settings.virtualenvs.path ~/.virtualenvs
+      # - name: Set Poetry config
+      #   run: |
+      #     poetry config settings.virtualenvs.in-project false
+      #     poetry config settings.virtualenvs.path ~/.virtualenvs
 
       - name: Install Dependencies
         run: poetry install
